layout de base et test disposition

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             </div>
             <div class="row">
               <div class="col-md-8" >
-                <div class="col-md-4" id="trends">
+                <div class="col-xs-6" id="trend">
                   <p> Trends - requirements <p>
                 </div>
-                <div class="col-md-4" id="phase">
+                <div class="col-xs-6" id="phase">
                   <p> CH phases</p>
                 </div>
               </div>
-              <div class="col-md-6" id="carte">
+              <div class="col-md-4" id="carte">
                 <p> carte sahel <p>
               </div>
             </div>
