--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="js/jquery-2.1.4.min.js"></script>
         <script src="js/d3.min.js"></script>
         <script src="js/crossfilter.v1.min.js"></script>
+        <script src="js/bootstrap.js"></script>
         <script src="js/dc.min.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/dc.leaflet.js"></script>
@@ -17,7 +18,7 @@
       <body>
         <div class="container-fluid" id='main-container'>
           <div class='content'>
-            <div class='container' style='font: 10px sans-serif;'>
+            <div class='container'>
             	<div class="row">
                 <div class="col-md-12">
                   <h2>Sahel Food Security trends.</h2>
@@ -36,16 +37,17 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-8" >
-                <div class="col-xs-6" id="trend">
-                  <p> Trends - requirements <p>
+              <div class="col-md-6" >
+                <div class="row">
+                  <div class="col-md-12" id="trend">
+                  </div>
                 </div>
-                <div class="col-xs-6" id="phase">
-                  <p> CH phases</p>
+                <div class="row">
+                  <div class="col-md-12" id="phase">
+                  </div>
                 </div>
               </div>
-              <div class="col-md-4" id="carte">
-                <p> carte sahel <p>
+              <div class="col-md-6" id="carte">
               </div>
             </div>
           </div>
