switch on travail

--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
             <div class="row">
               <div class="col-md-6" >
                 <div class="row">
-                  <div class="col-md-12" id="trend">
+                  <div class="col-md-12" id="phase">
+                    <p>
+                      Phase 1 : minor | Phase 2 : grave | Phase 3- 5 :Need reponse
+                    </p>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12" id="phase">
+                  <div class="col-md-12" id="trend">
                   </div>
                 </div>
               </div>
