--- a/index.html
+++ b/index.html
@@ -46,6 +46,35 @@
                   </div>
                 </div>
                 <div class="row">
+                  <div class="row">
+                    <div class="col-xs-4">
+                      <div class="btn-group">
+                        <button class="btn btn-default">
+                          Selection
+                        </button>
+                        <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li>
+                            <a href="#">Action</a>
+                          </li>
+                          <li class="disabled">
+                            <a href="#">Another action</a>
+                          </li>
+                          <li class="divider">
+                          </li>
+                          <li>
+                            <a href="#">Something else here</a>
+                          </li>
+                        </ul>
+                    </div>
+                    </div>
+                    <div class="col-xs-8">
+                      Selection
+                    </div>
+                  </div>
+
                   <div class="col-md-12" id="trend">
                   </div>
                 </div>
